Focus the search entry on keypress

And don't steal the focus from the entry when the results appear

https://bugzilla.gnome.org/show_bug.cgi?id=735274